Revert "Avoiding using deprecated new Integer in org.eclipse.osgi.compatibility.state"
This reverts commit 320764478d7907d8f05116cdd3daa075381366d7.

Change-Id: I5f25b42af955c6ee1866b00bbca82bfacfe19fd9